v0.4.1/_sources/autoapi/pya/backend/index.rst.txt
:py:mod:`pya.backend`
=====================

.. py:module:: pya.backend


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   Dummy/index.rst
   Jupyter/index.rst
   PyAudio/index.rst
   base/index.rst


Package Contents
----------------

Classes
~~~~~~~

.. autoapisummary::

   pya.backend.DummyBackend
   pya.backend.PyAudioBackend



Functions
~~~~~~~~~

.. autoapisummary::

   pya.backend.determine_backend



Attributes
~~~~~~~~~~

.. autoapisummary::

   pya.backend._LOGGER


.. py:class:: DummyBackend(dummy_devices=None)


   Bases: :py:obj:`pya.backend.base.BackendBase`

   Helper class that provides a standard way to create an ABC using
   inheritance.

   .. py:attribute:: dtype
      :value: 'float32'

      

   .. py:attribute:: range
      :value: 1

      

   .. py:attribute:: bs
      :value: 256

      

   .. py:method:: get_device_count()


   .. py:method:: get_device_info_by_index(idx)


   .. py:method:: get_default_input_device_info()


   .. py:method:: get_default_output_device_info()


   .. py:method:: open(*args, input_flag, output_flag, rate, frames_per_buffer, channels, stream_callback=None, **kwargs)


   .. py:method:: process_buffer(buffer)


   .. py:method:: terminate()



.. py:class:: PyAudioBackend(format=pyaudio.paFloat32)


   Bases: :py:obj:`pya.backend.base.BackendBase`

   Helper class that provides a standard way to create an ABC using
   inheritance.

   .. py:attribute:: _boot_delay
      :value: 0.5

      

   .. py:attribute:: bs
      :value: 512

      

   .. py:method:: get_device_count()


   .. py:method:: get_device_info_by_index(idx)


   .. py:method:: get_default_input_device_info()


   .. py:method:: get_default_output_device_info()


   .. py:method:: open(rate, channels, input_flag, output_flag, frames_per_buffer, input_device_index=None, output_device_index=None, start=True, input_host_api_specific_stream_info=None, output_host_api_specific_stream_info=None, stream_callback=None)


   .. py:method:: process_buffer(buffer)


   .. py:method:: terminate()



.. py:data:: _LOGGER

   

.. py:function:: determine_backend(force_webaudio=False, port=8765)


